Add connect method which use a default position (#102)
* Add connect to method which use Pos.ZERO as default position

* Cleanup imports

* Refactor weather test and use connect without a position parameter

* Revert some changes to fix test execution

* Fix indent at a semicolon